# interactive-project

./: README.md  index.html  pyproject.toml
data/: countries.json  sample_all_to_all_preview.csv  trade2015.csv  trade2016.csv  trade2017.csv  trade2018.csv  trade2019.csv  trade2020.csv  trade2021.csv  trade2022.csv  trade2023.csv  trade2024.csv  tradedata.csv
get_data/.ipynb_checkpoints/: comtrade_research-checkpoint.ipynb
milestones/: interactive-draft.md  interactive-proposal.md
research/: comtrade_research.ipynb
research/.ipynb_checkpoints/: comtrade_research-checkpoint.ipynb
src/: countries.js  main.js  main2.js  sankey.js  theme.css
