[project]
name = "altair-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "altair-saver>=0.5.0",
    "comtradeapicall>=1.2.1",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "ruff>=0.13.1",
    "vl-convert-python>=1.8.0",
    "world-trade-data>=0.1.1",
]
